--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+    <div class="loader">
+        <div></div>
+        <div></div>
+    </div>
     <div class="main-container">
         <!--HEADER-->
         <header class="header">
