--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -16,7 +16,7 @@
     <div class="main-container">
         <!--HEADER-->
         <header class="header">
-            <a hidden class="header__back" href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a class="header__back" href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
             <img class="header__logo" src="./assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
         </header>
         <!--CONTENU-->
