--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/85ade7d403.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/CSS/style.css">
+    <link rel="stylesheet" href="/sass/main.css">
 </head>
     
 <body>
@@ -19,15 +19,15 @@
             <a class="header__back" href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
             <img class="header__logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
         </header>
+        <div class="image-hero">
+            <img src="/assets/images/restaurants/Palette_du_gout.jpg" alt="Photo d'un plat proposé par le restaurant La palette du goût">
+        </div>
         <!--CONTENU-->
         <main class="contenu">
-            <div class="image-hero">
-                <img src="/assets/images/restaurants/Palette_du_gout.jpg" alt="Photo d'un plat proposé par le restaurant La palette du goût">
-            </div>
             <div class="menu">
-                <div class="title-menu">
-                    <h1 class="section-title">La palette du goût</h1>
-                    <form class="card__like" id="like-case1">
+                <div class="menu__head">
+                    <h1 class="title">La palette du goût</h1>
+                    <form class="price__like" id="like-case1">
                         <label for="like1">
                             <input type="checkbox" name="like-case" id="like1">
                                 <i class="like-unchecked1 fa-solid fa-heart"></i>
@@ -35,127 +35,144 @@
                         </label>
                     </form>
                 </div>
-                <section class="section-card entrees">
-                    <h2 class="section-card-title">ENTRÉES</h2>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Ficassée d'escargots</h3>
-                            <p class="detail-card">Au piment d'Espelette</p>
+                <!--test menu-->
+                <section class="section">
+                    <h2 class="section__title">ENTRÉES</h2>
+                    <div class="section__card">
+                        <input type="checkbox" name="menu1" id="checkbox1">
+                        <label class="card1" for="checkbox1">
+                            <div class="choix">
+                                <h3 class="choix__title">Ficassée d'escargots</h3>
+                                <p class="choix__detail">Au piment d'Espelette</p>
+                            </div>
+                            <div class="prix">
+                                <p>25€</p>
+                            </div>
+                            <div class="confirm">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </label>
+                    </div>
+                <!--fin test menu-->
+                <section class="menu-section">
+                    <h2 class="menu-section__title">ENTRÉES</h2>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Ficassée d'escargots</h3>
+                            <p class="choice__detail">Au piment d'Espelette</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>25€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Foie gras de canard mi-cuit</h3>
-                            <p class="detail-card">Et ses copeaux de truffe noire</p>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Foie gras de canard mi-cuit</h3>
+                            <p class="choice__detail">Et ses copeaux de truffe noire</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Œuf au plat</h3>
-                            <p class="detail-card">Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Œuf au plat</h3>
+                            <p class="choice__detail">Assaisonné à la truffe sur lit de caviar</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>20€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
-                <section class="section-card plats">
-                    <h2 class="section-card-title">PLATS</h2>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Filet de bœuf aux herbes</h3>
-                            <p class="detail-card">Accompagné de sa ribambelle de légumes</p>
+                <section class="menu-section">
+                    <h2 class="menu-section__title">PLATS</h2>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Filet de bœuf aux herbes</h3>
+                            <p class="choice__detail">Accompagné de sa ribambelle de légumes</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>40€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Parmentier de queue de bœuf</h3>
-                            <p class="detail-card">À la truffe noire sur sa purée de panais</p>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Parmentier de queue de bœuf</h3>
+                            <p class="choice__detail">À la truffe noire sur sa purée de panais</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Filet de turbot</h3>
-                            <p class="detail-card">Aux agrumes</p>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Filet de turbot</h3>
+                            <p class="choice__detail">Aux agrumes</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>44€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
-                <section class="section-card dessert">
-                    <h2 class="section-card-title">DESSERT</h2>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Paris-Brest</h3>
-                            <p class="detail-card">Revisité</p>
+                <section class="menu-section">
+                    <h2 class="menu-section__title">DESSERT</h2>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Paris-Brest</h3>
+                            <p class="choice__detail">Revisité</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>18€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Macaron au chocolat d'exception</h3>
-                            <p class="detail-card">Et glace à la vanille de Madagascar</p>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Macaron au chocolat d'exception</h3>
+                            <p class="choice__detail">Et glace à la vanille de Madagascar</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>22€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="content-card">
-                            <h3 class="title-card">Mousse au chocolat</h3>
-                            <p class="detail-card">Au piment d'Espelette et à la truffe noire</p>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Mousse au chocolat</h3>
+                            <p class="choice__detail">Au piment d'Espelette et à la truffe noire</p>
                         </div>
-                        <div class="price-card">
+                        <div class="price">
                             <p>23€</p>
                         </div>
-                        <div hidden class="check-card">
+                        <div hidden class="check">
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
-                <div class="order">
-                    <a class="btn-order" href="#">Commander</a>
-                </div>
             </div>
+            <button type="button" class="presentation__btn">Commander</button>
         </main>
         <!--FOOTER-->
         <footer>
