finalisation CSS desktop

--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -53,6 +53,7 @@
                             </div>
                         </label>
                     </div>
+                </section>
                 <!--fin test menu-->
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
@@ -171,33 +172,31 @@
                         </div>
                     </div>
                 </section>
+                <button type="submit" class="presentation__btn">Commander</button>
             </div>
-            <button type="button" class="presentation__btn">Commander</button>
         </main>
         <!--FOOTER-->
-        <footer>
-            <section class="footer">
-                <h2 class="footer__title">ohmyfood</h2>
-                <ul class="footer__content">
-                    <li class="item1">
-                        <i class="item2 fa-solid fa-utensils"></i>
-                        <a class="item3" href="#">Proposer un restaurant</a>
-                    </li>
-                    <li class="item4">
-                        <i class="fa-solid fa-handshake-angle fa-sm"></i>
-                        <a href="#">Devenir partenaire</a>
-                    </li>
-                    <li class="item3">
-                        <a href="#">Mentions légales</a>
-                    </li>
-                    <li class="item4">
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </section>
-        </footer>
-
-
     </div>
+    <footer>
+        <section class="footer">
+            <h2 class="footer__title">ohmyfood</h2>
+            <ul class="footer__content">
+                <li class="item1">
+                    <i class="item2 fa-solid fa-utensils"></i>
+                    <a class="item3" href="#">Proposer un restaurant</a>
+                </li>
+                <li class="item4">
+                    <i class="fa-solid fa-handshake-angle fa-sm"></i>
+                    <a href="#">Devenir partenaire</a>
+                </li>
+                <li class="item3">
+                    <a href="#">Mentions légales</a>
+                </li>
+                <li class="item4">
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
