--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                     </article>
                     <article class="card">
                         <div class="card__image">
-                            <a href="#">
+                            <a href="/restaurants/note-enchantee.html">
                                 <img src="./assets/images/restaurants/Note_enchantee.jpg" alt="Photo d'un plat proposé par le restaurant La note enchantée">
                                 <div class="box-new">Nouveau</div>
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="#">
+                            <a href="/restaurants/note-enchantee.html">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
