--- a/restaurants/note-enchantee.html
+++ b/restaurants/note-enchantee.html
@@ -20,13 +20,13 @@
             <img class="header__logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
         </header>
         <div class="image-hero">
-            <img src="/assets/images/restaurants/Palette_du_gout.jpg" alt="Photo d'un plat proposé par le restaurant La palette du goût">
+            <img src="/assets/images/restaurants/Note_enchantee.jpg" alt="Photo d'un plat proposé par le restaurant La note enchantée">
         </div>
         <!--CONTENU-->
         <main class="contenu">
             <div class="menu">
                 <div class="menu__head">
-                    <h1 class="title">La palette du goût</h1>
+                    <h1 class="title">La note enchantée</h1>
                     <form class="price__like" id="like-case1">
                         <label for="like1">
                             <input type="checkbox" name="like-case" id="like1">
@@ -42,8 +42,8 @@
                         <input type="checkbox" name="menu1" id="checkbox1">
                         <label class="card1" for="checkbox1">
                             <div>
-                                <h3 class="choix__title">Ficassée d'escargots</h3>
-                                <p class="choix__detail">Au piment d'Espelette</p>
+                                <h3 class="choix__title">Ravioles de foie gras</h3>
+                                <p class="choix__detail">Accompagnées de leur crème à la truffe</p>
                             </div>
                             <span>25€</span>
                             <div class="confirm">
@@ -57,8 +57,8 @@
                     <h2 class="menu-section__title">ENTRÉES</h2>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Ficassée d'escargots</h3>
-                            <p class="choice__detail">Au piment d'Espelette</p>
+                            <h3 class="choice__title">Ravioles de foie gras </h3>
+                            <p class="choice__detail">Accompagnées de leur crème à la truffe</p>
                         </div>
                         <div class="price">
                             <p>25€</p>
@@ -69,8 +69,8 @@
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Foie gras de canard mi-cuit</h3>
-                            <p class="choice__detail">Et ses copeaux de truffe noire</p>
+                            <h3 class="choice__title">Caviar osciètre</h3>
+                            <p class="choice__detail">Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="price">
                             <p>35€</p>
@@ -81,8 +81,20 @@
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Œuf au plat</h3>
-                            <p class="choice__detail">Assaisonné à la truffe sur lit de caviar</p>
+                            <h3 class="choice__title">Homard et espuma de potiron</h3>
+                            <p class="choice__detail">Marinés aux zestes d'orange</p>
+                        </div>
+                        <div class="price">
+                            <p>20€</p>
+                        </div>
+                        <div hidden class="check">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="menu-section__card">
+                        <div class="choice">
+                            <h3 class="choice__title">Foie gras de canard cuit entier</h3>
+                            <p class="choice__detail">Confiture de figue et pain toasté</p>
                         </div>
                         <div class="price">
                             <p>20€</p>
@@ -96,8 +108,8 @@
                     <h2 class="menu-section__title">PLATS</h2>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Filet de bœuf aux herbes</h3>
-                            <p class="choice__detail">Accompagné de sa ribambelle de légumes</p>
+                            <h3 class="choice__title">Noix de coquilles Saint-Jacques</h3>
+                            <p class="choice__detail">Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="price">
                             <p>40€</p>
@@ -108,8 +120,8 @@
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Parmentier de queue de bœuf</h3>
-                            <p class="choice__detail">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="choice__title">Langoustine poêlée</h3>
+                            <p class="choice__detail">Purée de patate douce</p>
                         </div>
                         <div class="price">
                             <p>35€</p>
@@ -120,8 +132,8 @@
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Filet de turbot</h3>
-                            <p class="choice__detail">Aux agrumes</p>
+                            <h3 class="choice__title">Mijoté de queue de bœuf</h3>
+                            <p class="choice__detail">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="price">
                             <p>44€</p>
@@ -135,8 +147,8 @@
                     <h2 class="menu-section__title">DESSERT</h2>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Paris-Brest</h3>
-                            <p class="choice__detail">Revisité</p>
+                            <h3 class="choice__title">Macaron noisette et chocolat</h3>
+                            <p class="choice__detail">Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="price">
                             <p>18€</p>
@@ -147,8 +159,8 @@
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Macaron au chocolat d'exception</h3>
-                            <p class="choice__detail">Et glace à la vanille de Madagascar</p>
+                            <h3 class="choice__title">Baba au rhum revisité</h3>
+                            <p class="choice__detail">Avec son coulis de citron</p>
                         </div>
                         <div class="price">
                             <p>22€</p>
@@ -159,8 +171,8 @@
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Mousse au chocolat</h3>
-                            <p class="choice__detail">Au piment d'Espelette et à la truffe noire</p>
+                            <h3 class="choice__title">Tarte au citron meringuée</h3>
+                            <p class="choice__detail">Déstructurée</p>
                         </div>
                         <div class="price">
                             <p>23€</p>
