--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -35,24 +35,6 @@
                         </label>
                     </form>
                 </div>
-                <!--test menu-->
-                <section class="section">
-                    <h2 class="section__title">ENTRÉES</h2>
-                    <div class="section__card">
-                        <input type="checkbox" name="menu1" id="checkbox1">
-                        <label class="card1" for="checkbox1">
-                            <div>
-                                <h3 class="choix__title">Ficassée d'escargots</h3>
-                                <p class="choix__detail">Au piment d'Espelette</p>
-                            </div>
-                            <span>25€</span>
-                            <div class="confirm">
-                                <i class="fa-regular fa-circle-check"></i>
-                            </div>
-                        </label>
-                    </div>
-                </section>
-                <!--fin test menu-->
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
                     <div class="menu-section__card">
@@ -64,7 +46,7 @@
                             <p>25€</p>
                         </div>
                         <div class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
@@ -76,7 +58,7 @@
                             <p>35€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
@@ -88,7 +70,7 @@
                             <p>20€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
@@ -103,7 +85,7 @@
                             <p>40€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
@@ -115,7 +97,7 @@
                             <p>35€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
@@ -127,7 +109,7 @@
                             <p>44€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
@@ -142,7 +124,7 @@
                             <p>18€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
@@ -154,7 +136,7 @@
                             <p>22€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
@@ -166,7 +148,7 @@
                             <p>23€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-regular fa-circle-check"></i>
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
