ajout pages restaurant

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/85ade7d403.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/sass/main.css">
+    <link rel="stylesheet" href="/assets/CSS/style.css">
 </head>
 
 <body>
@@ -113,12 +113,12 @@
                     </article>
                     <article class="card">
                         <div class="card__image">
-                            <a href="#">
+                            <a href="/restaurants/a-la-francaise.html">
                                 <img src="./assets/images/restaurants/a_la_francaise.jpg" alt="Photo d'un plat proposé par le restaurant À la française">
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="#">
+                            <a href="/restaurants/a-la-francaise.html">
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </a>
@@ -133,12 +133,12 @@
                     </article>
                     <article class="card">
                         <div class="card__image">
-                            <a href="#">
+                            <a href="/restaurants/delice-des-sens.html">
                                 <img src="./assets/images/restaurants/delice_des_sens.jpg" alt="Photo d'un plat proposé par le restaurant Le délice des sens">
                             </a>
                         </div>
                         <div class="card__content">
-                            <a href="#">
+                            <a href="/restaurants/delice-des-sens.html">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </a>
