--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -20,13 +20,13 @@
             <img class="header__logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood Paris">
         </header>
         <div class="image-hero">
-            <img src="/assets/images/restaurants/Palette_du_gout.jpg" alt="Photo d'un plat proposé par le restaurant La palette du goût">
+            <img src="/assets/images/restaurants/a_la_francaise.jpg" alt="Photo d'un plat proposé par le restaurant À la française">
         </div>
         <!--CONTENU-->
         <main class="contenu">
             <div class="menu">
                 <div class="menu__head">
-                    <h1 class="title">La palette du goût</h1>
+                    <h1 class="title">À la française</h1>
                     <form class="price__like" id="like-case1">
                         <label for="like1">
                             <input type="checkbox" name="like-case" id="like1">
@@ -39,38 +39,42 @@
                     <h2 class="menu-section__title">ENTRÉES</h2>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Ficassée d'escargots</h3>
-                            <p class="choice__detail">Au piment d'Espelette</p>
+                            <h3 class="choice__title">Tartare de poulpe acidulé</h3>
+                            <p class="choice__detail">Aux zestes d'orange
+                            </p>
                         </div>
                         <div class="price">
                             <p>25€</p>
                         </div>
                         <div class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Foie gras de canard mi-cuit</h3>
-                            <p class="choice__detail">Et ses copeaux de truffe noire</p>
+                            <h3 class="choice__title">Velouté de légumes d'antan
+                            </h3>
+                            <p class="choice__detail">Carotte, panais, topinambour
+                            </p>
                         </div>
                         <div class="price">
                             <p>35€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Œuf au plat</h3>
-                            <p class="choice__detail">Assaisonné à la truffe sur lit de caviar</p>
+                            <h3 class="choice__title">Soupe à l'oignon
+                            </h3>
+                            <p class="choice__detail">Revisitée</p>
                         </div>
                         <div class="price">
                             <p>20€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
@@ -78,38 +82,38 @@
                     <h2 class="menu-section__title">PLATS</h2>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Filet de bœuf aux herbes</h3>
-                            <p class="choice__detail">Accompagné de sa ribambelle de légumes</p>
+                            <h3 class="choice__title">Coquilles Saint-Jacques</h3>
+                            <p class="choice__detail">Accompagnées d'une purée de panais</p>
                         </div>
                         <div class="price">
                             <p>40€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Parmentier de queue de bœuf</h3>
-                            <p class="choice__detail">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="choice__title">Magret de canard</h3>
+                            <p class="choice__detail">Et parmentier de pommes de terre</p>
                         </div>
                         <div class="price">
                             <p>35€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Filet de turbot</h3>
-                            <p class="choice__detail">Aux agrumes</p>
+                            <h3 class="choice__title">Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p class="choice__detail">Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <div class="price">
                             <p>44€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
@@ -117,38 +121,38 @@
                     <h2 class="menu-section__title">DESSERT</h2>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Paris-Brest</h3>
-                            <p class="choice__detail">Revisité</p>
+                            <h3 class="choice__title">Pétales de violettes glacés</h3>
+                            <p class="choice__detail">Et purée de noisettes</p>
                         </div>
                         <div class="price">
                             <p>18€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Macaron au chocolat d'exception</h3>
-                            <p class="choice__detail">Et glace à la vanille de Madagascar</p>
+                            <h3 class="choice__title">Fondant au chocolat</h3>
+                            <p class="choice__detail">Revisité</p>
                         </div>
                         <div class="price">
                             <p>22€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                     <div class="menu-section__card">
                         <div class="choice">
-                            <h3 class="choice__title">Mousse au chocolat</h3>
-                            <p class="choice__detail">Au piment d'Espelette et à la truffe noire</p>
+                            <h3 class="choice__title">Millefeuille croustillant</h3>
+                            <p class="choice__detail">Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="price">
                             <p>23€</p>
                         </div>
                         <div hidden class="check">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
                 </section>
