--- a/restaurants/note-enchantee.html
+++ b/restaurants/note-enchantee.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/85ade7d403.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/sass/main.css">
+    <link rel="stylesheet" href="/assets/CSS/style.css">
 </head>
     
 <body>
@@ -35,24 +35,6 @@
                         </label>
                     </form>
                 </div>
-                <!--test menu-->
-                <section class="section">
-                    <h2 class="section__title">ENTRÉES</h2>
-                    <div class="section__card">
-                        <input type="checkbox" name="menu1" id="checkbox1">
-                        <label class="card1" for="checkbox1">
-                            <div>
-                                <h3 class="choix__title">Ravioles de foie gras</h3>
-                                <p class="choix__detail">Accompagnées de leur crème à la truffe</p>
-                            </div>
-                            <span>25€</span>
-                            <div class="confirm">
-                                <i class="fa-regular fa-circle-check"></i>
-                            </div>
-                        </label>
-                    </div>
-                </section>
-                <!--fin test menu-->
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
                     <div class="menu-section__card">
