--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/85ade7d403.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
 <body>
@@ -160,10 +160,10 @@
                 <h2 class="footer__title">ohmyfood</h2>
                 <ul class="footer__content">
                     <li class="item1">
-                        <i class="item2 fa-solid fa-utensils"></i>
-                        <a class="item3" href="#">Proposer un restaurant</a>
+                        <i class="fa-solid fa-utensils"></i>
+                        <a href="#">Proposer un restaurant</a>
                     </li>
-                    <li class="item4">
+                    <li class="item2">
                         <i class="fa-solid fa-handshake-angle fa-sm"></i>
                         <a href="#">Devenir partenaire</a>
                     </li>
