animation apparition des plats des restos

--- a/restaurants/delice-des-sens.html
+++ b/restaurants/delice-des-sens.html
@@ -37,7 +37,7 @@
                 </div>
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Tartare de thon </h3>
                             <p class="choice__detail">Assaisonné au yuzu</p>
@@ -49,7 +49,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Bouchée de homard croustillant</h3>
                             <p class="choice__detail">Et sa farandole de petits légumes</p>
@@ -61,7 +61,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Velouté de cèpes</h3>
                             <p class="choice__detail">Aux truffes</p>
@@ -76,7 +76,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">PLATS</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Poulet rôti aux herbes de Provence</h3>
                             <p class="choice__detail">Et sa crème de truffe</p>
@@ -88,7 +88,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Langouste rôtie</h3>
                             <p class="choice__detail">Et ses légumes de saison</p>
@@ -100,7 +100,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Côte de bœuf Angus</h3>
                             <p class="choice__detail">Et sa purée de panais</p>
@@ -115,7 +115,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">DESSERT</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Farandole de desserts</h3>
                             <p class="choice__detail">Du chef</p>
@@ -127,7 +127,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Crème brûlée</h3>
                             <p class="choice__detail">Revisitée</p>
@@ -139,7 +139,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Tiramisu</h3>
                             <p class="choice__detail">À la noisette</p>
