--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -37,7 +37,7 @@
                 </div>
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Ficassée d'escargots</h3>
                             <p class="choice__detail">Au piment d'Espelette</p>
@@ -49,7 +49,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Foie gras de canard mi-cuit</h3>
                             <p class="choice__detail">Et ses copeaux de truffe noire</p>
@@ -61,7 +61,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Œuf au plat</h3>
                             <p class="choice__detail">Assaisonné à la truffe sur lit de caviar</p>
@@ -76,7 +76,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">PLATS</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Filet de bœuf aux herbes</h3>
                             <p class="choice__detail">Accompagné de sa ribambelle de légumes</p>
@@ -88,7 +88,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Parmentier de queue de bœuf</h3>
                             <p class="choice__detail">À la truffe noire sur sa purée de panais</p>
@@ -100,7 +100,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Filet de turbot</h3>
                             <p class="choice__detail">Aux agrumes</p>
@@ -115,7 +115,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">DESSERT</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Paris-Brest</h3>
                             <p class="choice__detail">Revisité</p>
@@ -127,7 +127,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Macaron au chocolat d'exception</h3>
                             <p class="choice__detail">Et glace à la vanille de Madagascar</p>
@@ -139,7 +139,7 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Mousse au chocolat</h3>
                             <p class="choice__detail">Au piment d'Espelette et à la truffe noire</p>
