--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -37,7 +37,7 @@
                 </div>
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Tartare de poulpe acidulé</h3>
                             <p class="choice__detail">Aux zestes d'orange
@@ -50,7 +50,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Velouté de légumes d'antan
                             </h3>
@@ -64,7 +64,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Soupe à l'oignon
                             </h3>
@@ -80,7 +80,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">PLATS</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Coquilles Saint-Jacques</h3>
                             <p class="choice__detail">Accompagnées d'une purée de panais</p>
@@ -92,7 +92,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Magret de canard</h3>
                             <p class="choice__detail">Et parmentier de pommes de terre</p>
@@ -104,7 +104,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Pigeonneau d’Ille-et-Vilaine</h3>
                             <p class="choice__detail">Sur son lit de gnocchis aux légumes</p>
@@ -119,7 +119,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">DESSERT</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Pétales de violettes glacés</h3>
                             <p class="choice__detail">Et purée de noisettes</p>
@@ -131,7 +131,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Fondant au chocolat</h3>
                             <p class="choice__detail">Revisité</p>
@@ -143,7 +143,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Millefeuille croustillant</h3>
                             <p class="choice__detail">Myrtilles et pâte d’amande</p>
