--- a/restaurants/note-enchantee.html
+++ b/restaurants/note-enchantee.html
@@ -37,7 +37,7 @@
                 </div>
                 <section class="menu-section">
                     <h2 class="menu-section__title">ENTRÉES</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Ravioles de foie gras </h3>
                             <p class="choice__detail">Accompagnées de leur crème à la truffe</p>
@@ -49,7 +49,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Caviar osciètre</h3>
                             <p class="choice__detail">Sur blini à la farine de blé noir</p>
@@ -61,7 +61,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Homard et espuma de potiron</h3>
                             <p class="choice__detail">Marinés aux zestes d'orange</p>
@@ -73,7 +73,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--4">
                         <div class="choice">
                             <h3 class="choice__title">Foie gras de canard cuit entier</h3>
                             <p class="choice__detail">Confiture de figue et pain toasté</p>
@@ -88,7 +88,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">PLATS</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Noix de coquilles Saint-Jacques</h3>
                             <p class="choice__detail">Sur lit de purée de céleri-rave</p>
@@ -100,7 +100,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Langoustine poêlée</h3>
                             <p class="choice__detail">Purée de patate douce</p>
@@ -112,7 +112,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Mijoté de queue de bœuf</h3>
                             <p class="choice__detail">Et riz sauvage aux zestes de citron</p>
@@ -127,7 +127,7 @@
                 </section>
                 <section class="menu-section">
                     <h2 class="menu-section__title">DESSERT</h2>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--1">
                         <div class="choice">
                             <h3 class="choice__title">Macaron noisette et chocolat</h3>
                             <p class="choice__detail">Glace au caramel brun et sel de Guérande</p>
@@ -139,7 +139,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--2">
                         <div class="choice">
                             <h3 class="choice__title">Baba au rhum revisité</h3>
                             <p class="choice__detail">Avec son coulis de citron</p>
@@ -151,7 +151,7 @@
                             <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="menu-section__card">
+                    <div class="menu-section__card menu-section__card--3">
                         <div class="choice">
                             <h3 class="choice__title">Tarte au citron meringuée</h3>
                             <p class="choice__detail">Déstructurée</p>
