maj breakpoint sass

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/85ade7d403.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+    <link rel="stylesheet" href="/assets/CSS/style.css">
 </head>
 
 <body>
@@ -43,26 +43,26 @@
             <!--FONCTIONNNEMENT-->
             <div class="operation">
                 <h2 class="operation__title">Fonctionnement</h2>
-                <div class="step">
-                    <ul class="step__detail">
+                <div class="operation__step">
+                    <ul class="step-detail">
                         <li><i class="fa-solid fa-mobile-screen-button"></i></li>
                         <li><p>Choisissez un restaurant</p></li>
                     </ul>
-                    <div class="step__order">1</div>
+                    <div class="step-order">1</div>
                 </div>
-                <div class="step">
-                    <ul class="step__detail">
+                <div class="operation__step">
+                    <ul class="step-detail">
                         <li><i class="fa-solid fa-list-ul"></i></li>
                         <li><p>Composez votre menu</p></li>
                     </ul>
-                    <div class="step__order">2</div>
+                    <div class="step-order">2</div>
                 </div>
-                <div class="step">
-                    <ul class="step__detail">
+                <div class="operation__step">
+                    <ul class="step-detail">
                         <li><i class="fa-solid fa-store"></i></li>
                         <li><p>Dégustez au restaurant</p></li>
                     </ul>
-                    <div class="step__order">3</div>
+                    <div class="step-order">3</div>
                 </div>
             </div>
             <!--RESTAURANTS-->
@@ -167,6 +167,8 @@
                         <i class="fa-solid fa-handshake-angle fa-sm"></i>
                         <a href="#">Devenir partenaire</a>
                     </li>
+                </ul>
+                <ul class="footer__content">
                     <li class="item3">
                         <a href="#">Mentions légales</a>
                     </li>
