--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <!--FOOTER-->
         <footer>
             <section class="footer">
-                <h2 class="footer__title">ohmyfood</h2>
-                <ul class="footer__content">
+                <h2 class="footer__title footer__order1">ohmyfood</h2>
+                <ul class="footer__content footer__order2">
                     <li class="item1">
                         <i class="fa-solid fa-utensils"></i>
                         <a href="#">Proposer un restaurant</a>
@@ -168,7 +168,7 @@
                         <a href="#">Devenir partenaire</a>
                     </li>
                 </ul>
-                <ul class="footer__content">
+                <ul class="footer__content footer__order3">
                     <li class="item3">
                         <a href="#">Mentions légales</a>
                     </li>
