--- a/restaurants/note-enchantee.html
+++ b/restaurants/note-enchantee.html
@@ -13,7 +13,7 @@
 </head>
     
 <body>
-    <div class="main-container">
+    <div class="main-container main-container--color">
         <!--HEADER-->
         <header class="header">
             <a class="header__back" href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
@@ -167,20 +167,22 @@
                 <button type="submit" class="presentation__btn">Commander</button>
             </div>
         </main>
-        <!--FOOTER-->
-    </div>
+    </div>        
+    <!--FOOTER-->
     <footer>
         <section class="footer">
-            <h2 class="footer__title">ohmyfood</h2>
-            <ul class="footer__content">
+            <h2 class="footer__title footer__order1">ohmyfood</h2>
+            <ul class="footer__content footer__order2">
                 <li class="item1">
-                    <i class="item2 fa-solid fa-utensils"></i>
-                    <a class="item3" href="#">Proposer un restaurant</a>
+                    <i class="fa-solid fa-utensils"></i>
+                    <a href="#">Proposer un restaurant</a>
                 </li>
-                <li class="item4">
+                <li class="item2">
                     <i class="fa-solid fa-handshake-angle fa-sm"></i>
                     <a href="#">Devenir partenaire</a>
                 </li>
+            </ul>
+            <ul class="footer__content footer__order3">
                 <li class="item3">
                     <a href="#">Mentions légales</a>
                 </li>
